bugfix mediawiki-articles
fix bug, where pictures at the top of articles overflows the top edge

--- a/useroperations/static/useroperations/css/mediawiki.css
+++ b/useroperations/static/useroperations/css/mediawiki.css
@@ -12,7 +12,7 @@
 }
 
 .mediawiki-article{
-    padding: 0 50px 0 0;
+    padding: 1px 50px 0 0;
     max-width:900px;
 }
 
